@@ -1,3 +1,11 @@
+2006-10-21  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* src/buoh-view-comic.c:
+	* src/buoh-window.c:
+
+	Handle scrolled window policy based on current zoom mode. Use the
+	right zoom level on loading process. 
+
 2006-10-20  Carlos Garcia Campos  <carlosgc@gnome.org>
 
 	* data/comics.xml: 
